# earth-gis

./: .gitignore  LICENSE  Makefile  README.md  Readme.md  pyproject.toml  requirements.txt  requirements_frozen.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
egis/: utils.py  utils_plotting.py
notebooks/: find_images.ipynb
notebooks/tutorials/: 01_Landsat_8_visualizations.ipynb  01_crs_intro.ipynb  02_Landsat_8_timelapse_visualizations.ipynb  02_Zonal_statistics_and_US_land_coverage.ipynb  02_image_clipping_with_CRS_reprojections.ipynb  03_spatial_resolution.ipynb  04_multispectral.ipynb  04_spacenet_building_footprints.ipynb  satellitenet_building_footprints.ipynb  zonal_statistics.ipynb
notebooks/tutorials_geemap/: 04_multispectral.ipynb
poverty-prediction/: Readme.md  attach_light_intensities.py  process_survey_data.py  requirements.txt
poverty-prediction/data/raw_data/: .gitignore  viirs_2015_00N060W.tif.dvc  viirs_2015_75N060W.tif.dvc
poverty-prediction/src_pp/: path_pp.py  utils.py
