[tool.poetry]
name = "egis"
version = "0.1.0"
description = "Geographic information system (GIS) applications"
authors = ["cgroll <groll.christian.edu@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
geemap = "^0.8.16"
numpy = "^1.20.3"
pandas = "^1.2.4"
jupyter = "^1.0.0"
earthengine-api = "^0.1.265"
cookiecutter = "^1.7.3"
branca = "0.3.1" # FIX for leaflet maps on github pages; otherwise maps are not shown
# branca references:
# https://issueexplorer.com/issue/python-visualization/folium/1277
# https://github.com/streamlit/streamlit/issues/1514

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
